[package]
authors = ["Robert Collins <robertc@robertcollins.net>"]
description = "the demons cellular automaton"
edition = "2018"
license = "Apache-2"
name = "demons"
publish = false
repository = "https://github.com/rbtcollins/demons.git"
version = "0.1.0"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
console_error_panic_hook = {version = "0.1.6", optional = true}
js-sys = "0.3.50"
wasm-bindgen = "0.2.73"

[dependencies.web-sys]
features = [
  'console',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'ImageData',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
]
version = "0.3.4"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"
wasm-bindgen-test = "0.3"

[[bench]]
harness = false
name = "demons_bench"

[profile.release]
lto = true
